--- a/db/config.yaml
+++ b/db/config.yaml
@@ -1,7 +1,7 @@
 ---
 name: "Vibrant DB"
 slug: "vbt-db"
-version: "0.0.1"
+version: "latest"
 description: "Vibrant's DB"
 startup: services
 init: false
@@ -10,7 +10,7 @@ arch:
   - aarch64
   - amd64
   - armv7
-image: harbor-dev.vibrantbt.net/gateway/db:latest
+image: harbor-dev.vibrantbt.net/gateway/db
 map:
   - data:rw
 options:
