environment variable for coap to allow all devices on network for now

--- a/coap-broker/config.yaml
+++ b/coap-broker/config.yaml
@@ -15,6 +15,7 @@ boot: "auto"
 map: ["data:rw", "config:rw"]
 environment:
   NO_DTLS_OK: "true"
+  COAP_ALLOW_UNKNOWN_DEVICES: "true"
   DB_MODE: "psql"
 options:
   coap_api_key: "!secret coap_api_key"
